testsuite/tests/templates/basic/bad_instance_arg_value_wrong_type.ml
module Category_utils_of_list_monoid =
  Category_utils(Category)(List_monoid) [@jane.non_erasable.instances]
